--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 SEDA_RPC_ENDPOINT=https://rpc.testnet.seda.xyz
 
 # (optional) Explorer for the SEDA network you want to interact with 
-SEDA_EXPLORER_ENDPOINT=https://devnet.explorer.seda.xyz
+SEDA_EXPLORER_URL=https://devnet.explorer.seda.xyz
 
 # Your SEDA chain mnemonic, fill this in to upload binaries or interact with data requests directly
 SEDA_MNEMONIC=
